populate and add links from contact and about page

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,16 @@
-{{outlet}}
+<p>Question and Answer board reps would love to answer any question you have or help you with troubleshooting issues</p>
+
+<p>Contact us today!</p>
+
+<p>
+  Question and Answer board Headquarters<br>
+  216 Eastlake Avenue<br>
+  Seattle, Wa 98005
+</p>
+
+<p>(503) 555-1212</p>
+
+<p>QA@Gmail.com</p>
+
+
+{{#link-to 'about'}}About{{/link-to}}
