--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,1 +1,10 @@
-{{outlet}}
+<h2>Question and Answer board</h2>
+
+<p>
+  Question and Answer board is a website created
+  for people to ask any questions; with the purpose
+  of getting an answer.
+</p>
+
+
+{{#link-to 'contact'}}Click here to contact us.{{/link-to}}
