add json file in index js temporary too see if application is working

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<h1>Welcome to Question Answer Board</h1>
+
+Have any unanswered Quesitons?.....let us help just
+ask your question and await a response.
+
+{{#link-to 'about'}}About{{/link-to}}
+{{#link-to 'contact'}}Click here to contact us.{{/link-to}}
