import json file to firebase and add api key to env file, and refactor index js file

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,7 @@ Have any unanswered Quesitons?.....let us help just
 ask your question and await a response.
 
 <ul>
-  {{#each model as |questions|}}
+  {{#each model as |question|}}
   <li>{{question.author}} Question and {{question.content}} Topic</li>
   {{/each}}
 </ul>
