populate question-tile file and refactor index to add question-tile

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,7 @@ ask your question and await a response.
 
 <ul>
   {{#each model as |question|}}
-  <li>{{question.author}} Question and {{question.content}} Topic</li>
+    {{question-tile question=question}}
   {{/each}}
 </ul>
 
