add delete button and functionality and refactor index file too make it work

--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -6,4 +6,5 @@
   {{else}}
       <button {{action 'showNotes'}}>Display</button>
   {{/if}}
+    <button {{action 'delete' question}}>Delete</button>
 </li>
