--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,7 +5,7 @@ ask your question and await a response.
 
 <ul>
   {{#each model as |question|}}
-    {{question-tile question=question}}
+    {{question-tile question=question deleteQuestion="deleteQuestion"}}
   {{/each}}
 </ul>
 
